src/antlr/JavaScriptParser.java
// Generated from C:/Users/oday/Desktop/reactJs/src/antlr/JavaScriptParser.g4 by ANTLR 4.13.1
package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JavaScriptParser extends Parser {
    public static final int
            OpenBracket = 1, CloseBracket = 2, OpenParen = 3, CloseParen = 4, OpenBrace = 5,
            CloseBrace = 6, SemiColon = 7, Comma = 8, Assign = 9, QuestionMark = 10, Colon = 11,
            Dot = 12, Plus = 13, Minus = 14, Not = 15, Multiply = 16, Divide = 17, LessThan = 18,
            MoreThan = 19, LessThanEquals = 20, GreaterThanEquals = 21, Equals = 22, NotEquals = 23,
            And = 24, Or = 25, ARROW = 26, Modulus = 27, Let = 28, If = 29, Else = 30, While = 31,
            Break = 32, Continue = 33, Function = 34, Return = 35, New = 36, NullLiteral = 37,
            BooleanLiteral = 38, StringLiteral = 39, NumberLiteral = 40, Identifier = 41,
            WhiteSpaces = 42, LineTerminator = 43, JsxComment = 44, MultiLineComment = 45,
            SingleLineComment = 46, Catch = 47, Finally = 48, This = 49, Throw = 50, Try = 51,
            From = 52, UseState = 53, Export = 54, Import = 55, Modules = 56;
    public static final int
            RULE_program = 0, RULE_statement = 1, RULE_if = 2, RULE_elseif = 3, RULE_else = 4,
            RULE_expression = 5, RULE_jsxElement = 6, RULE_jsxContentNode = 7, RULE_htmlAttribute = 8,
            RULE_htmlAttributeValue = 9, RULE_eos = 10;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public JavaScriptParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "program", "statement", "if", "elseif", "else", "expression", "jsxElement",
                "jsxContentNode", "htmlAttribute", "htmlAttributeValue", "eos"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "','", "'='",
                "'?'", "':'", "'.'", "'+'", "'-'", "'!'", "'*'", "'/'", "'<'", "'>'",
                "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", "'=>'", "'%'", "'let'",
                "'if'", "'else'", "'while'", "'break'", "'continue'", "'function'", "'return'",
                "'new'", "'null'", null, null, null, null, null, null, null, null, null,
                "'catch'", "'finally'", "'this'", "'throw'", "'try'", "'from'", "'useState'",
                "'export'", "'import'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace",
                "CloseBrace", "SemiColon", "Comma", "Assign", "QuestionMark", "Colon",
                "Dot", "Plus", "Minus", "Not", "Multiply", "Divide", "LessThan", "MoreThan",
                "LessThanEquals", "GreaterThanEquals", "Equals", "NotEquals", "And",
                "Or", "ARROW", "Modulus", "Let", "If", "Else", "While", "Break", "Continue",
                "Function", "Return", "New", "NullLiteral", "BooleanLiteral", "StringLiteral",
                "NumberLiteral", "Identifier", "WhiteSpaces", "LineTerminator", "JsxComment",
                "MultiLineComment", "SingleLineComment", "Catch", "Finally", "This",
                "Throw", "Try", "From", "UseState", "Export", "Import", "Modules"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "JavaScriptParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(25);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4396704628778L) != 0)) {
                    {
                        {
                            setState(22);
                            statement();
                        }
                    }
                    setState(27);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(28);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statement);
        int _la;
        try {
            int _alt;
            setState(110);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
                case 1:
                    _localctx = new VariableDeclarationStatementContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(30);
                    match(Let);
                    setState(31);
                    match(Identifier);
                    setState(32);
                    match(Assign);
                    setState(33);
                    expression(0);
                    setState(34);
                    eos();
                }
                break;
                case 2:
                    _localctx = new ArrayDeclarationStatementContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(36);
                    match(Let);
                    setState(37);
                    match(OpenBracket);
                    setState(38);
                    match(Identifier);
                    setState(39);
                    match(Comma);
                    setState(40);
                    match(Identifier);
                    setState(45);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == Comma) {
                        {
                            {
                                setState(41);
                                match(Comma);
                                setState(42);
                                match(Identifier);
                            }
                        }
                        setState(47);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(48);
                    match(CloseBracket);
                    setState(49);
                    match(Assign);
                    setState(50);
                    expression(0);
                    setState(51);
                    eos();
                }
                break;
                case 3:
                    _localctx = new ConditionalStatementContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(53);
                    if_();
                    setState(57);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                    while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                        if (_alt == 1) {
                            {
                                {
                                    setState(54);
                                    elseif();
                                }
                            }
                        }
                        setState(59);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                    }
                    setState(61);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == Else) {
                        {
                            setState(60);
                            else_();
                        }
                    }

                }
                break;
                case 4:
                    _localctx = new LoopStatementContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(63);
                    match(While);
                    setState(64);
                    match(OpenParen);
                    setState(65);
                    expression(0);
                    setState(66);
                    match(CloseParen);
                    setState(67);
                    match(OpenBrace);
                    setState(71);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4396704628778L) != 0)) {
                        {
                            {
                                setState(68);
                                statement();
                            }
                        }
                        setState(73);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(74);
                    match(CloseBrace);
                }
                break;
                case 5:
                    _localctx = new BreakStatementContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(76);
                    match(Break);
                    setState(77);
                    eos();
                }
                break;
                case 6:
                    _localctx = new ContinueStatementContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(78);
                    match(Continue);
                    setState(79);
                    eos();
                }
                break;
                case 7:
                    _localctx = new FunctionDectarationStatementContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                {
                    setState(80);
                    match(Function);
                    setState(81);
                    match(Identifier);
                    setState(82);
                    match(OpenParen);
                    setState(91);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == Identifier) {
                        {
                            setState(83);
                            match(Identifier);
                            setState(88);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la == Comma) {
                                {
                                    {
                                        setState(84);
                                        match(Comma);
                                        setState(85);
                                        match(Identifier);
                                    }
                                }
                                setState(90);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }

                    setState(93);
                    match(CloseParen);
                    setState(94);
                    match(OpenBrace);
                    setState(98);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4396704628778L) != 0)) {
                        {
                            {
                                setState(95);
                                statement();
                            }
                        }
                        setState(100);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(101);
                    match(CloseBrace);
                }
                break;
                case 8:
                    _localctx = new ReturnStatementContext(_localctx);
                    enterOuterAlt(_localctx, 8);
                {
                    setState(102);
                    match(Return);
                    setState(104);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4346507198506L) != 0)) {
                        {
                            setState(103);
                            expression(0);
                        }
                    }

                    setState(106);
                    eos();
                }
                break;
                case 9:
                    _localctx = new ExpressionStatementContext(_localctx);
                    enterOuterAlt(_localctx, 9);
                {
                    setState(107);
                    expression(0);
                    setState(108);
                    eos();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IfContext if_() throws RecognitionException {
        IfContext _localctx = new IfContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_if);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(112);
                match(If);
                setState(113);
                match(OpenParen);
                setState(114);
                expression(0);
                setState(115);
                match(CloseParen);
                setState(116);
                match(OpenBrace);
                setState(120);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4396704628778L) != 0)) {
                    {
                        {
                            setState(117);
                            statement();
                        }
                    }
                    setState(122);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(123);
                match(CloseBrace);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ElseifContext elseif() throws RecognitionException {
        ElseifContext _localctx = new ElseifContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_elseif);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(125);
                match(Else);
                setState(126);
                match(If);
                setState(127);
                match(OpenParen);
                setState(128);
                expression(0);
                setState(129);
                match(CloseParen);
                setState(130);
                match(OpenBrace);
                setState(134);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4396704628778L) != 0)) {
                    {
                        {
                            setState(131);
                            statement();
                        }
                    }
                    setState(136);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(137);
                match(CloseBrace);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ElseContext else_() throws RecognitionException {
        ElseContext _localctx = new ElseContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_else);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(139);
                match(Else);
                setState(140);
                match(OpenBrace);
                setState(144);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4396704628778L) != 0)) {
                    {
                        {
                            setState(141);
                            statement();
                        }
                    }
                    setState(146);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(147);
                match(CloseBrace);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpressionContext expression() throws RecognitionException {
        return expression(0);
    }

    private ExpressionContext expression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
        ExpressionContext _prevctx = _localctx;
        int _startState = 10;
        enterRecursionRule(_localctx, 10, RULE_expression, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(272);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 27, _ctx)) {
                    case 1: {
                        _localctx = new MemberIndexExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;

                        setState(150);
                        match(Identifier);
                        setState(151);
                        match(OpenBracket);
                        setState(152);
                        expression(0);
                        setState(153);
                        match(CloseBracket);
                    }
                    break;
                    case 2: {
                        _localctx = new ObjectDotPropertyExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(155);
                        match(Identifier);
                        setState(156);
                        match(Dot);
                        setState(157);
                        match(Identifier);
                    }
                    break;
                    case 3: {
                        _localctx = new MemberAssignmentExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(158);
                        match(Identifier);
                        setState(159);
                        match(Dot);
                        setState(160);
                        match(Identifier);
                        setState(161);
                        match(Assign);
                        setState(162);
                        expression(30);
                    }
                    break;
                    case 4: {
                        _localctx = new ObjectDotFunctionCallExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(163);
                        match(Identifier);
                        setState(164);
                        match(Dot);
                        setState(165);
                        match(Identifier);
                        setState(166);
                        match(OpenParen);
                        setState(175);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4346507198506L) != 0)) {
                            {
                                setState(167);
                                expression(0);
                                setState(172);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                while (_la == Comma) {
                                    {
                                        {
                                            setState(168);
                                            match(Comma);
                                            setState(169);
                                            expression(0);
                                        }
                                    }
                                    setState(174);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                }
                            }
                        }

                        setState(177);
                        match(CloseParen);
                    }
                    break;
                    case 5: {
                        _localctx = new NewExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(178);
                        match(New);
                        setState(179);
                        match(Identifier);
                        setState(180);
                        match(OpenParen);
                        setState(189);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4346507198506L) != 0)) {
                            {
                                setState(181);
                                expression(0);
                                setState(186);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                while (_la == Comma) {
                                    {
                                        {
                                            setState(182);
                                            match(Comma);
                                            setState(183);
                                            expression(0);
                                        }
                                    }
                                    setState(188);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                }
                            }
                        }

                        setState(191);
                        match(CloseParen);
                    }
                    break;
                    case 6: {
                        _localctx = new FunctionCallExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(192);
                        match(Identifier);
                        setState(193);
                        match(OpenParen);
                        setState(202);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4346507198506L) != 0)) {
                            {
                                setState(194);
                                expression(0);
                                setState(199);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                while (_la == Comma) {
                                    {
                                        {
                                            setState(195);
                                            match(Comma);
                                            setState(196);
                                            expression(0);
                                        }
                                    }
                                    setState(201);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                }
                            }
                        }

                        setState(204);
                        match(CloseParen);
                    }
                    break;
                    case 7: {
                        _localctx = new AnonFunctionExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(205);
                        match(Function);
                        setState(206);
                        match(OpenParen);
                        setState(215);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == Identifier) {
                            {
                                setState(207);
                                match(Identifier);
                                setState(212);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                while (_la == Comma) {
                                    {
                                        {
                                            setState(208);
                                            match(Comma);
                                            setState(209);
                                            match(Identifier);
                                        }
                                    }
                                    setState(214);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                }
                            }
                        }

                        setState(217);
                        match(CloseParen);
                        setState(218);
                        match(OpenBrace);
                        setState(222);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4396704628778L) != 0)) {
                            {
                                {
                                    setState(219);
                                    statement();
                                }
                            }
                            setState(224);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(225);
                        match(CloseBrace);
                    }
                    break;
                    case 8: {
                        _localctx = new NotExpressionStatementContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(226);
                        match(Not);
                        setState(227);
                        expression(25);
                    }
                    break;
                    case 9: {
                        _localctx = new ParenthesizedExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(228);
                        match(OpenParen);
                        setState(229);
                        expression(0);
                        setState(230);
                        match(CloseParen);
                    }
                    break;
                    case 10: {
                        _localctx = new IdentifierExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(232);
                        match(Identifier);
                    }
                    break;
                    case 11: {
                        _localctx = new NullLiteralExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(233);
                        match(NullLiteral);
                    }
                    break;
                    case 12: {
                        _localctx = new BooleanLiteralExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(234);
                        match(BooleanLiteral);
                    }
                    break;
                    case 13: {
                        _localctx = new StringLiteralExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(235);
                        match(StringLiteral);
                    }
                    break;
                    case 14: {
                        _localctx = new NumberLiteralExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(236);
                        match(NumberLiteral);
                    }
                    break;
                    case 15: {
                        _localctx = new ArrayLiteralExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(237);
                        match(OpenBracket);
                        setState(246);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4346507198506L) != 0)) {
                            {
                                setState(238);
                                expression(0);
                                setState(243);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                while (_la == Comma) {
                                    {
                                        {
                                            setState(239);
                                            match(Comma);
                                            setState(240);
                                            expression(0);
                                        }
                                    }
                                    setState(245);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                }
                            }
                        }

                        setState(248);
                        match(CloseBracket);
                    }
                    break;
                    case 16: {
                        _localctx = new ObjectLiteralExpressionContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(249);
                        match(OpenBrace);
                        setState(265);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == Identifier) {
                            {
                                setState(250);
                                match(Identifier);
                                setState(251);
                                match(Colon);
                                setState(252);
                                expression(0);
                                setState(259);
                                _errHandler.sync(this);
                                _alt = getInterpreter().adaptivePredict(_input, 24, _ctx);
                                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                                    if (_alt == 1) {
                                        {
                                            {
                                                setState(253);
                                                match(Comma);
                                                setState(254);
                                                match(Identifier);
                                                setState(255);
                                                match(Colon);
                                                setState(256);
                                                expression(0);
                                            }
                                        }
                                    }
                                    setState(261);
                                    _errHandler.sync(this);
                                    _alt = getInterpreter().adaptivePredict(_input, 24, _ctx);
                                }
                                setState(263);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                if (_la == Comma) {
                                    {
                                        setState(262);
                                        match(Comma);
                                    }
                                }

                            }
                        }
